[target.'cfg(target_os = "windows")']
rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "zero_os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9.11"
mars_vga = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


